WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
176646
[GStreamer] Missing GRefPtr adoptions in MediaPlayerPrivateGStreamerBase, PlaybackPipeline
https://bugs.webkit.org/show_bug.cgi?id=176646
Summary
[GStreamer] Missing GRefPtr adoptions in MediaPlayerPrivateGStreamerBase, Pla...
Zan Dobersek
Reported
2017-09-09 03:26:30 PDT
[GStreamer] Missing GRefPtr adoptions in MediaPlayerPrivateGStreamerBase, PlaybackPipeline
Attachments
Patch
(3.07 KB, patch)
2017-09-09 03:31 PDT
,
Zan Dobersek
cgarcia
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Zan Dobersek
Comment 1
2017-09-09 03:31:16 PDT
Created
attachment 320340
[details]
Patch
Carlos Garcia Campos
Comment 2
2017-09-09 03:47:01 PDT
Comment on
attachment 320340
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=320340&action=review
> Source/WebCore/platform/graphics/gstreamer/mse/PlaybackPipeline.cpp:464 > + GRefPtr<GstPad> srcPad = adoptGRef(sinkPad ? gst_pad_get_peer(sinkPad.get()) : nullptr);
adoptGref(nullptr) looks weird, I would write this as: GRefPtr<GstPad> srcPad = sinkPad ? adoptGRef(gst_pad_get_peer(sinkPad.get())) : nullptr;
Zan Dobersek
Comment 3
2017-09-09 05:38:51 PDT
Committed
r221815
: <
http://trac.webkit.org/changeset/221815
>
Radar WebKit Bug Importer
Comment 4
2017-09-27 13:02:14 PDT
<
rdar://problem/34694520
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug