[GStreamer] Missing GRefPtr adoptions in MediaPlayerPrivateGStreamerBase, PlaybackPipeline https://bugs.webkit.org/show_bug.cgi?id=176646

Reviewed by Carlos Garcia Campos.

* platform/graphics/gstreamer/MediaPlayerPrivateGStreamerBase.cpp:
(WebCore::registerWebKitGStreamerElements): Adopt the return value
of gst_element_factory_find(), which is transferred in full.
* platform/graphics/gstreamer/mse/PlaybackPipeline.cpp:
(WebCore::PlaybackPipeline::flush): Adopt the return values
of gst_element_get_static_pad() and gst_pad_get_peer(), both being
transferred in full.

git-svn-id: http://svn.webkit.org/repository/webkit/trunk@221815 268f45cc-cd09-0410-ab3c-d52691b4dbfc
Signed-off-by: Xabier Rodriguez Calvar <calvaris@igalia.com>